fix(styles): add space for screenshots on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   display: grid;
   grid-template-rows: 1fr 80px;
   min-height: 100vh;
+  transition: all 300ms ease;
 }
 main {
   padding: 20px;
@@ -49,8 +50,12 @@ footer div {
 }
 
 @media only screen and (max-width: 700px) {
+  .app-container {
+    grid-template-rows: 1fr 200px;
+  }
   footer {
     display: flex;
+    justify-content: end;
     flex-flow: column-reverse;
     margin: 0 auto;
   }
